# DiCam_235_remote_control

./: .gitignore  README.md  how_to_capture_wifi.md  pyproject.toml  readme.md  wifi_help.md  wifi_help.txt
camera_control/: camera_capture.py
dicam_235_client/: __init__.py
service/: how_to.txt  how_to_create_usb_console.txt
service/daily_photo_capture/: daily_photo_capture.service  readme.md
service/rpi_zero_usb_console/: config.txt  readme.md
tools/: daily_photo_capture.py  manual_control.py
